<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="telephony_attribution_tag">Telephony</string>
    <string name="phoneAppLabel" product="default">Phone Services</string>
    <string name="emergencyDialerIconLabel">Emergency Dialer</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Payphone</string>
    <string name="onHold">On hold</string>
    <string name="carrier_mmi_msg_title"><xliff:g id="mmicarrier" example="T-Mobile">%s</xliff:g> Message</string>
    <string name="default_carrier_mmi_msg_title">Carrier Message</string>
    <string name="mmiStarted">MMI code started</string>
    <string name="ussdRunning">USSD code running\u2026</string>
    <string name="mmiCancelled">MMI code canceled</string>
    <string name="cancel">Cancel</string>
    <string name="enter_input">USSD message must be between <xliff:g id="min_len" >%1$d</xliff:g> and <xliff:g id="max_len" >%2$d</xliff:g> characters. Please try again.</string>
    <string name="manageConferenceLabel">Manage conference call</string>
    <string name="ok">OK</string>
    <string name="audio_mode_speaker">Speaker</string>
    <string name="audio_mode_earpiece">Handset earpiece</string>
    <string name="audio_mode_wired_headset">Wired headset</string>
    <string name="audio_mode_bluetooth">Bluetooth</string>
    <string name="wait_prompt_str">Send the following tones?\n</string>
    <string name="pause_prompt_str">Sending tones\n</string>
    <string name="send_button">Send</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="wild_prompt_str">Replace wild character with</string>
    <string name="no_vm_number">Missing voicemail number</string>
    <string name="no_vm_number_msg">No voicemail number is stored on the SIM card.</string>
    <string name="add_vm_number_str">Add number</string>
    <string name="voice_number_setting_primary_user_only">Voicemail Settings can only be modified by the Primary User.</string>
    <string name="puk_unlocked">Your SIM card has been unblocked. Your phone is unlocking\u2026</string>
    <string name="label_ndp">SIM network unlock PIN</string>
    <string name="label_phoneid">SIM locked for operator</string>
    <string name="sim_ndp_unlock_text">Unlock</string>
    <string name="sim_ndp_dismiss_text">Dismiss</string>
    <string name="requesting_unlock">Requesting network unlock\u2026</string>
    <string name="unlock_failed">Network unlock request unsuccessful.</string>
    <string name="unlock_success">Network unlock successful.</string>
    <string name="mobile_network_settings_not_available">Mobile network settings are not available for this user</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelGsmMore_with_label">GSM call settings (<xliff:g id="subscriptionlabel" example="T-Mobile">%s</xliff:g>)</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="labelCdmaMore_with_label">CDMA call settings (<xliff:g id="subscriptionlabel" example="Verizon">%s</xliff:g>)</string>
    <string name="apn_settings">Access Point Names</string>
    <string name="settings_label">Network settings</string>
    <string name="phone_accounts">Calling accounts</string>
    <string name="phone_accounts_make_calls_with">Make calls with</string>
    <string name="phone_accounts_make_sip_calls_with">Make SIP calls with</string>
    <string name="phone_accounts_ask_every_time">Ask first</string>
    <string name="phone_accounts_default_account_label">No network available</string>
    <string name="phone_accounts_settings_header">Settings</string>
    <string name="phone_accounts_choose_accounts">Choose accounts</string>
    <string name="phone_accounts_selection_header">Phone accounts</string>
    <string name="phone_accounts_add_sip_account">Add SIP account</string>
    <string name="phone_accounts_configure_account_settings">Configure account settings</string>
    <string name="phone_accounts_all_calling_accounts">All calling accounts</string>
    <string name="phone_accounts_all_calling_accounts_summary">Select which accounts can make calls</string>
    <string name="voip_call_log_integration_label">Third party apps</string>
    <string name="voip_call_log_integration_summary">Allow other apps to show calls in your call history. If turned off, these calls will only appear in their specific apps.</string>
    <string name="wifi_calling">Wi-Fi calling</string>
    <string name="connection_service_default_label">Built-in connection service</string>
    <string name="voicemail">Voicemail</string>
    <string name="voicemail_settings_with_label">Voicemail (<xliff:g id="subscriptionlabel" example="Mock Carrier">%s</xliff:g>)</string>
    <string name="voicemail_abbreviated">VM:</string>
    <string name="voicemail_notifications_key" translatable="false">voicemail_notification_key</string>
    <string name="make_and_receive_calls">Make &amp; receive calls</string>
    <string name="smart_forwarding_settings_menu">Smart Forwarding</string>
    <string name="smart_forwarding_settings_menu_summary">When one number isn\'t reachable, always forward calls to your other number</string>
    <string name="voicemail_notifications_preference_title">Notifications</string>
    <string name="cell_broadcast_settings">Emergency broadcasts</string>
    <string name="call_settings">Call settings</string>
    <string name="additional_gsm_call_settings">Additional settings</string>
    <string name="additional_gsm_call_settings_with_label">Additional settings (<xliff:g id="subscriptionlabel" example="Verizon">%s</xliff:g>)</string>
    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
    <string name="additional_cdma_call_settings">Additional CDMA call settings</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="labelNwService">Network service settings</string>
    <string name="labelCallerId">Caller ID</string>
    <string name="sum_loading_settings">Loading settings\u2026</string>
    <string name="sum_hide_caller_id">Number hidden in outgoing calls</string>
    <string name="sum_show_caller_id">Number displayed in outgoing calls</string>
    <string name="sum_default_caller_id">Use default operator settings to display my number in outgoing calls</string>
    <string name="labelCW">Call waiting</string>
    <string name="sum_cw_enabled">During a call, notify me of incoming calls</string>
    <string name="sum_cw_disabled">During a call, notify me of incoming calls</string>
    <string name="call_forwarding_settings">Call forwarding settings</string>
    <string name="call_forwarding_settings_with_label">Call forwarding settings (<xliff:g id="subscriptionlabel" example="Verizon">%s</xliff:g>)</string>
    <string name="labelCF">Call forwarding</string>
    <string name="labelCFU">Always forward</string>
    <string name="messageCFU">Always use this number</string>
    <string name="sum_cfu_enabled_indicator">Forwarding all calls</string>
    <string name="sum_cfu_enabled">Forwarding all calls to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfu_enabled_no_number">Number is unavailable</string>
    <string name="sum_cfu_disabled">Off</string>
    <string name="labelCFB">When busy</string>
    <string name="messageCFB">Number when busy</string>
    <string name="sum_cfb_enabled">Forwarding to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfb_disabled">Off</string>
    <string name="disable_cfb_forbidden">Your operator doesn\'t support disabling call forwarding when your phone is busy.</string>
    <string name="labelCFNRy">When unanswered</string>
    <string name="messageCFNRy">Number when unanswered</string>
    <string name="sum_cfnry_enabled">Forwarding to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfnry_disabled">Off</string>
    <string name="disable_cfnry_forbidden">Your operator doesn\'t support disabling call forwarding when your phone doesn\'t answer.</string>
    <string name="labelCFNRc">When unreachable</string>
    <string name="messageCFNRc">Number when unreachable</string>
    <string name="sum_cfnrc_enabled">Forwarding to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfnrc_disabled">Off</string>
    <string name="disable_cfnrc_forbidden">Your carrier doesn\'t support disabling call forwarding when your phone is unreachable.</string>
    <string name="registration_cf_forbidden">Your carrier doesn\'t support call forwarding.</string>
    <string name="cdma_call_waiting">Turn on call waiting?</string>
    <string name="enable_cdma_call_waiting_setting">During a call, you\'ll be notified about incoming calls</string>
    <string name="enable_cdma_cw">Turn on</string>
    <string name="disable_cdma_cw">Cancel</string>
    <string name="voice_privacy">Voice privacy</string>
    <string name="voice_privacy_summary">Enable enhanced privacy mode</string>
    <string name="volte_provisioned_switch_string">VoLTE Provisioned</string>
    <string name="vt_provisioned_switch_string">Video Calling Provisioned</string>
    <string name="wfc_provisioned_switch_string">Wifi Calling Provisioned</string>
    <string name="eab_provisioned_switch_string">EAB/Presence Provisioned</string>
    <string name="radio_info_radio_power">Mobile Radio Power</string>
    <string name="simulate_out_of_service_label">Simulate Out of Service</string>
    <string name="radio_info_dl_kbps">DL Bandwidth (kbps):</string>
    <string name="radio_info_ul_kbps">UL Bandwidth (kbps):</string>
    <string name="radio_info_cell_info_refresh_rate">Cell Info Refresh Rate:</string>
    <string name="radio_info_cellinfo_label">All Cell Measurement Info:</string>
    <string name="radio_info_gprs_service_label">Data Service:</string>
    <string name="radio_info_roaming_label">Roaming:</string>
    <string name="radio_info_current_network_label">Current Network:</string>
    <string name="radio_info_gsm_service_label">Voice Service:</string>
    <string name="radio_info_signal_strength_label">Signal Strength:</string>
    <string name="radio_info_voice_network_type_label">Voice Network Type:</string>
    <string name="radio_info_data_network_type_label">Data Network Type:</string>
    <string name="radio_info_override_network_type_label">Override Network Type:</string>
    <string name="radio_info_voice_raw_registration_state_label">Voice Raw Registration State:</string>
    <string name="radio_info_data_raw_registration_state_label">Data Raw Registration State:</string>
    <string name="radio_info_set_perferred_label">Set Preferred Network Type:</string>
    <string name="radio_info_nr_available">NR Available (NSA):</string>
    <string name="radio_info_nr_state">NR State (NSA):</string>
    <string name="radio_info_nr_frequency">NR Frequency:</string>
    <string name="phone0_title">Phone 0</string>
    <string name="phone1_title">Phone 1</string>
    <string name="satellite_config_version_for_skylo_label">skylo version: </string>
    <string name="satellite_max_allowed_data_mode_label">max allowed data mode: </string>
    <string name="satellite_config_version_for_starlink_label">starlink version: </string>
    <string name="satellite_config_service_type_label">subId/plmn/servicetype: </string>
    <string name="satellite_config_allow_access_label">allow_access: </string>
    <string name="satellite_config_country_code_label">country codes: </string>
    <string name="satellite_config_size_of_sats2_dat_label">size of sats2.dat: </string>
    <string name="satellite_config_json_label">satellite access config json: </string>
</resources>