<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:title="@string/additional_cdma_call_settings">

    <PreferenceScreen
        android:key="button_cf_expand_key"
        android:title="@string/labelCF"
        android:persistent="false">
    </PreferenceScreen>

    <PreferenceScreen
        android:key="button_cw_key"
        android:title="@string/labelCW"
        android:persistent="false">
    </PreferenceScreen>

    <com.android.phone.CallWaitingSwitchPreference
        android:key="button_cw_ut_key"
        android:title="@string/labelCW"
        android:persistent="false"
        android:summaryOn="@string/sum_cw_enabled"
        android:summaryOff="@string/sum_cw_disabled"
        android:enabled="false"/>

    <com.android.phone.CdmaVoicePrivacySwitchPreference
        android:key="button_voice_privacy_key"
        android:title="@string/voice_privacy"
        android:persistent="false"
        android:summary="@string/voice_privacy_summary"/>
</PreferenceScreen>
