<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2025 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="120dp"
    android:layoutDirection="locale"
    android:textDirection="locale">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- version starlink from SatelliteController -->
        <LinearLayout style="@style/RadioInfo_entry_layout">
            <TextView android:text="@string/satellite_config_version_for_starlink_label" style="@style/info_label" />
            <TextView android:id="@+id/starlink_version" style="@style/info_value" />
        </LinearLayout>

        <!-- cids, plmns, svcTypes -->
        <LinearLayout style="@style/RadioInfo_entry_layout">
            <TextView android:text="@string/satellite_config_service_type_label" style="@style/info_label" />
            <TextView android:id="@+id/svc_type" style="@style/info_value" />
        </LinearLayout>

        <!-- maxAllowedDataMode from SatelliteController -->
        <LinearLayout style="@style/RadioInfo_entry_layout">
            <TextView android:text="@string/satellite_max_allowed_data_mode_label" style="@style/info_label" />
            <TextView android:id="@+id/max_allowed_data_mode" style="@style/info_value" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="10dip"
            android:alpha="0"/>

        <LinearLayout style="@style/RadioInfo_entry_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView android:text="-------------------------------------" style="@style/info_label"
            android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="10dip"
            android:alpha="0"/>

        <!-- version skylo from SatelliteController -->
        <LinearLayout style="@style/RadioInfo_entry_layout">
            <TextView android:text="@string/satellite_config_version_for_skylo_label" style="@style/info_label" />
            <TextView android:id="@+id/skylo_version" style="@style/info_value" />
        </LinearLayout>

        <!-- allow access -->
        <LinearLayout style="@style/RadioInfo_entry_layout">
            <TextView android:text="@string/satellite_config_allow_access_label" style="@style/info_label" />
            <TextView android:id="@+id/allow_access" style="@style/info_value" />
        </LinearLayout>

        <!-- country codes -->
        <LinearLayout style="@style/RadioInfo_entry_layout">
            <TextView android:text="@string/satellite_config_country_code_label" style="@style/info_label" />
            <TextView android:id="@+id/country_codes" style="@style/info_value" />
        </LinearLayout>

        <!-- size of sats2dat file -->
        <LinearLayout style="@style/RadioInfo_entry_layout">
            <TextView android:text="@string/satellite_config_size_of_sats2_dat_label" style="@style/info_label" />
            <TextView android:id="@+id/size_of_sats2" style="@style/info_value" />
        </LinearLayout>

        <!-- satellite access config json -->
        <LinearLayout style="@style/entry_layout">
            <TextView android:text="@string/satellite_config_json_label" style="@style/info_label" />
            <TextView android:id="@+id/config_json" style="@style/info_value" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>

